    but no longer need the versioned dependency on dpkg-dev. The same solution
    was chosen for cairo itself and is probably more reliable than depending
    on RPATH in objdump (especially as lintian does not seem to like RPATHs).

  [ Attilio Fiandrotti ]
  * Removed workaround for #407035 because upstream fixed in gtk+ 2.10.x series.

 -- Attilio Fiandrotti <attilio.fiandrotti@gmail.com>  Fri, 27 Jul 2007 15:19:25 +0200

cdebconf (0.119) unstable; urgency=low

  [ Attilio Fiandrotti ]
  * Only update keymap when needed in GTK frontend. Closes: #402126.

  [ Frans Pop ]
  * debian/rules: remove the -l option in the dh_shlibsdep call.
    As it effectively was a no-op before the previous release, it looks like
    it is no longer needed.
  * Add versioned dependency on dpkg-dev (>=1.14.5) because earlier versions
    have a bug in the parsing of rdepends from objdump which makes the gtk
    udeb depend on the wrong library for cairo (cf. #427988).

 -- Frans Pop <fjp@debian.org>  Fri, 06 Jul 2007 14:45:48 +0200

cdebconf (0.118) unstable; urgency=low

  [ Colin Watson ]
  * Set debconf/translations-dropped to true if translations are permanently
    dropped. (The implementation isn't in exactly the right place; see the
    comment in src/confmodule.c.)
  * It's the 21st century. Move configure.in to configure.ac so that we use
    autoconf >= 2.50.
  * Fix broken --without-rpath configure option.
  * Clean up configure.ac quoting and message emission.
  * Use printf rather than echo to send commands to cdebconf, to avoid
    breaking escaped commands if /bin/sh is dash (cf. #306134).
  * Avoid using non-XSI local variables; instead use a nasty temporary IFS
    setting hack and _db_local_ namespace (cf. #242011).
  * Don't define db_stop twice in shell confmodule.

  [ Attilio Fiandrotti ]
  * DirectFB specific lines of code are compiled in only if DI_UDEB was
    defined at configure time.

  [ Frans Pop ]