@@ -11,6 +11,9 @@ cdebconf (0.120) UNRELEASED; urgency=low
   [ Attilio Fiandrotti ]
   * Removed workaround for #407035 because upstream fixed in gtk+ 2.10.x series.
 
+  [ Colin Watson ]
+  * Fix reference leak in question_get_text.
+
  -- Attilio Fiandrotti <attilio.fiandrotti@gmail.com>  Fri, 27 Jul 2007 15:19:25 +0200
 
 cdebconf (0.119) unstable; urgency=low
